--- a/templates/home-page.ejs
+++ b/templates/home-page.ejs
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="/stylesheets/home-page.css">
     <title>Chemixplore | Home</title>
 </head>
 <body>
-    <h1>Hello <%= username %></h1>
+    <nav>
+        <div class="nav-profile-group">
+            <i class="fa-solid fa-user"></i> <p><%= username %></p>
+        </div>
+        <div class="nav-buttons-group">
+            <button><i class="fa-solid fa-gear"></i></button>
+        </div>
+    </nav>
+
+    <div class="workspaces">
+        
+    </div>
+
 </body>
 </html>
