--- a/templates/home-page.ejs
+++ b/templates/home-page.ejs
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+        integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/stylesheets/home-page.css">
     <title>Chemixplore | Home</title>
 </head>
+
 <body>
     <nav>
         <div class="nav-profile-group">
-            <i class="fa-solid fa-user"></i> <p><%= username %></p>
+            <i class="fa-solid fa-user"></i>
+            <p>
+                <%= username %>
+            </p>
         </div>
         <div class="nav-buttons-group">
             <button><i class="fa-solid fa-gear"></i></button>
@@ -19,8 +26,20 @@
     </nav>
 
     <div class="workspaces">
-        
+        <div class="local_workspace_intro_card_container">
+            <div class="local_workspace_intro_card">
+                <span>
+                    <p class="local_workspace_title">Local Workspace</p>
+                    <p class="local_workspace_hero">Dive Into Chemistry, Simulate and Learn!</p>
+                </span>
+                <button class="local_workspace_create_button">Create local workspace</button>
+            </div>
+        </div>
+        <div class="collaborative_workspace_intro_card_container">
+
+        </div>
     </div>
 
 </body>
+
 </html>
